# axon

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml  mobile.yml
apps/agents/: Dockerfile  package.json  pyproject.toml
apps/agents/src/: agent_templates.py  llm_router.py  main.py  mcp_bridge.py  observability.py  rag_db.py
apps/agents/src/agents/: default_agent.py
apps/agents/src/tools/: __init__.py  db_query.py  rag_search.py  web_search.py
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: server.ts
apps/api/src/lib/: auth.ts  (+3 more)
apps/mobile/: README.md  RELEASE.md  app.json  eas.json  expo-env.d.ts  metro.config.js  package.json
apps/mobile/app/: _layout.tsx  chat.tsx  documents.tsx  index.tsx  login.tsx
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/worker/: Dockerfile  package.json
docs/: end_to_end_saas_blueprint.md  privacy-policy.md  security-checklist.md
docs/portfolio/: README.md  architecture-one-pager.md  case-study.md  cold-outreach.md  contra.md  features-highlights.md  fiverr-gig-description.md  linkedin.md  pitch-kit.md  social-posts.md  toptal-arc.md  upwork-project-description.md  upwork-proposal-template.md
infra/cloudflare/: README.md
infra/docker/: Caddyfile  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.prod.yml
infra/mcp/: claude-desktop.json
infra/oracle-vm/: setup.sh
scripts/: backup-db.sh  generate-secrets.sh  screenshots.ts  seed-demo.ts
(+65 files in other folders)
